added shop page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Barett | Главная</title>
     <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
     <!-- link gogh font -->
     <link
@@ -70,109 +70,113 @@
         </div>
       </div>
     </header>
-    <section class="home">
-      <div class="container">
-        <div class="wrap">
-          <div class="info">
-            <h1></h1>
-            <div class="options">
-              <a href="shop.html">
-                <button class="shop">Перейти в магазин</button>
-              </a>
+    <div class="wrapper">
+      <main>
+        <section class="home">
+          <div class="container">
+            <div class="wrap">
+              <div class="info">
+                <h1></h1>
+                <div class="options">
+                  <a href="shop.html">
+                    <button class="shop">Перейти в магазин</button>
+                  </a>
+                </div>
+              </div>
+              <div class="picture">
+                <img src="" alt="" class="curent" />
+              </div>
             </div>
           </div>
-          <div class="picture">
-            <img src="" alt="" class="curent" />
+        </section>
+        <section class="categories">
+          <div class="container">
+            <h2 class="sec-name">Категории</h2>
+            <div class="line"></div>
+            <div class="wrap">
+              <div class="cards"></div>
+            </div>
+          </div>
+        </section>
+        <section class="top-sellers">
+          <div class="container">
+            <h2 class="sec-name">Популярные товары</h2>
+            <div class="line"></div>
+            <div class="wrap"></div>
+          </div>
+        </section>
+        <section class="reviews">
+          <div class="container">
+            <h2 class="sec-name">Отзывы</h2>
+            <div class="line"></div>
+            <div class="wrap"></div>
+            <div class="switch">
+              <i class="fa-solid fa-chevron-left"></i>
+              <div class="indicators"></div>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <div class="container">
+          <div class="wrap">
+            <div class="column desc">
+              <span class="icon-Logo"></span>
+              <p>
+                Магазин гитар Barett - это крупный музыкальный магазин,
+                специализирующийся на продаже гитар, гитарного оборудования и
+                аксессуаров. В магазине представлены все виды гитар: от
+                начинающих и любителей до профессиональных музыкантов.
+              </p>
+            </div>
+            <div class="sep"></div>
+            <div class="column navigation">
+              <span>Навигация</span>
+              <ul>
+                <li><a href="index.html" class="link-active">Главная</a></li>
+                <li>
+                  <a href="shop.html">Магазин</a>
+                  <ul>
+                    <li><a href="electric.html">Электрогитары</a></li>
+                    <li><a href="acoustic.html">Акустические гитары</a></li>
+                    <li><a href="classical.html">Классическае гитары</a></li>
+                    <li><a href="acessories.html">Аксессуары</a></li>
+                  </ul>
+                </li>
+                <li><a href="cart.html">Корзина</a></li>
+              </ul>
+            </div>
+            <div class="sep"></div>
+            <div class="column contacts">
+              <span>Связаться с нами</span>
+              <ul>
+                <li><a href="">+7 370 730-93-40</a></li>
+                <li><a href="barett@gmail.com">barett@gmail.com</a></li>
+                <li><a href="adress.html">Адреса магазинов</a></li>
+                <li><a href="abuot.html">О нас</a></li>
+                <li><a href="news.html">Новости</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="social">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+          <div class="legal">
+            <span>Политика конфиденциальности</span>
+            <div class="sep"></div>
+            <span>Пользовательское соглашение</span>
+            <div class="sep"></div>
+            <span>Отказ от ответственности</span>
+            <div class="sep"></div>
+            <span>Политика использования файлов cookie</span>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="categories">
-      <div class="container">
-        <h2 class="sec-name">Категории</h2>
-        <div class="line"></div>
-        <div class="wrap">
-          <div class="cards"></div>
-        </div>
-      </div>
-    </section>
-    <section class="top-sellers">
-      <div class="container">
-        <h2 class="sec-name">Популярные товары</h2>
-        <div class="line"></div>
-        <div class="wrap"></div>
-      </div>
-    </section>
-    <section class="reviews">
-      <div class="container">
-        <h2 class="sec-name">Отзывы</h2>
-        <div class="line"></div>
-        <div class="wrap"></div>
-        <div class="switch">
-          <i class="fa-solid fa-chevron-left"></i>
-          <div class="indicators"></div>
-          <i class="fa-solid fa-chevron-right"></i>
-        </div>
-      </div>
-    </section>
-    <section class="footer">
-      <div class="container">
-        <div class="wrap">
-          <div class="column desc">
-            <span class="icon-Logo"></span>
-            <p>
-              Магазин гитар Barett - это крупный музыкальный магазин,
-              специализирующийся на продаже гитар, гитарного оборудования и
-              аксессуаров. В магазине представлены все виды гитар: от начинающих
-              и любителей до профессиональных музыкантов.
-            </p>
-          </div>
-          <div class="sep"></div>
-          <div class="column navigation">
-            <span>Навигация</span>
-            <ul>
-              <li><a href="index.html" class="link-active">Главная</a></li>
-              <li>
-                <a href="shop.html">Магазин</a>
-                <ul>
-                  <li><a href="electric.html">Электрогитары</a></li>
-                  <li><a href="acoustic.html">Акустические гитары</a></li>
-                  <li><a href="classical.html">Классическае гитары</a></li>
-                  <li><a href="acessories.html">Аксессуары</a></li>
-                </ul>
-              </li>
-              <li><a href="cart.html">Корзина</a></li>
-            </ul>
-          </div>
-          <div class="sep"></div>
-          <div class="column contacts">
-            <span>Связаться с нами</span>
-            <ul>
-              <li><a href="">+7 370 730-93-40</a></li>
-              <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-              <li><a href="adress.html">Адреса магазинов</a></li>
-              <li><a href="abuot.html">О нас</a></li>
-              <li><a href="news.html">Новости</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="social">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-youtube"></i>
-        </div>
-        <div class="legal">
-          <span>Политика конфиденциальности</span>
-          <div class="sep"></div>
-          <span>Пользовательское соглашение</span>
-          <div class="sep"></div>
-          <span>Отказ от ответственности</span>
-          <div class="sep"></div>
-          <span>Политика использования файлов cookie</span>
-        </div>
-      </div>
-    </section>
+      </footer>
+    </div>
     <script src="js/home.js"></script>
     <script src="js/items.js"></script>
     <script src="js/base.js"></script>
