--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <ul>
                 <li><a href="electric.html">Электрогитары</a></li>
                 <li><a href="acoustic.html">Акустические гитары</a></li>
-                <li><a href="classical.html">Классическае гитары</a></li>
+                <li><a href="classical.html">Классические гитары</a></li>
                 <li><a href="acessories.html">Аксессуары</a></li>
               </ul>
             </li>
@@ -98,7 +98,7 @@
             </div>
           </div>
         </section>
-        <section class="top-sellers">
+        <section class="top-sellers items">
           <div class="container">
             <h2 class="sec-name">Популярные товары</h2>
             <div class="line"></div>
@@ -139,8 +139,12 @@
                   <a href="shop.html">Магазин</a>
                   <ul>
                     <li><a href="electric.html">Электрогитары</a></li>
-                    <li><a href="acoustic.html">Акустические гитары</a></li>
-                    <li><a href="classical.html">Классическае гитары</a></li>
+                    <li>
+                      <a href="acoustic.html">Акустические гитары</a>
+                    </li>
+                    <li>
+                      <a href="classical.html">Классические гитары</a>
+                    </li>
                     <li><a href="acessories.html">Аксессуары</a></li>
                   </ul>
                 </li>
@@ -177,8 +181,7 @@
         </div>
       </footer>
     </div>
-    <script src="js/home.js"></script>
-    <script src="js/items.js"></script>
+    <script src="js/home.js " type="module"></script>
     <script src="js/base.js"></script>
   </body>
 </html>
