categories colored, map page completed

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barett | Главная</title>
+    <title>Barett | О нас</title>
     <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
     <!-- link gogh font -->
     <link
@@ -20,9 +20,8 @@
     <!-- link fontawesome -->
     <link rel="stylesheet" href="css/materialize.min.css" />
     <!-- link materialize -->
-    <link rel="stylesheet" href="css/home.min.css" />
-    <link rel="stylesheet" href="css/items.min.css" />
     <link rel="stylesheet" href="css/base.min.css" />
+    <link rel="stylesheet" href="css/about.min.css" />
     <!-- link style css -->
     <link rel="stylesheet" href="fonts/logo/style.css" />
   </head>
@@ -36,7 +35,7 @@
         <div class="navigation column">
           <span>Навигация</span>
           <ul>
-            <li><a href="index.html" class="link-active">Главная</a></li>
+            <li><a href="index.html" class="">Главная</a></li>
             <li>
               <a href="shop.html">Магазин</a>
               <ul>
@@ -54,8 +53,10 @@
           <ul>
             <li><a href="">+7 370 730-93-40</a></li>
             <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-            <li><a href="adress.html">Адреса магазинов</a></li>
-            <li><a href="about.html">О нас</a></li>
+            <li>
+              <a href="adress.html">Адреса магазинов</a>
+            </li>
+            <li><a href="about.html" class="link-active">О нас</a></li>
             <li><a href="news.html">Новости</a></li>
           </ul>
         </div>
@@ -63,7 +64,7 @@
     </div>
     <header>
       <div class="container">
-        <span class="cur-page">Главная</span>
+        <span class="cur-page">О нас</span>
         <div class="mini-menu">
           <span class="icon-Logo logo"></span>
           <i class="fa-solid fa-bars bars"></i>
@@ -71,53 +72,7 @@
       </div>
     </header>
     <div class="wrapper">
-      <main>
-        <section class="home">
-          <div class="container">
-            <div class="wrap">
-              <div class="info">
-                <h1></h1>
-                <div class="options">
-                  <a href="shop.html">
-                    <button class="shop">Перейти в магазин</button>
-                  </a>
-                </div>
-              </div>
-              <div class="picture">
-                <img src="" alt="" class="curent" />
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="categories">
-          <div class="container">
-            <h2 class="sec-name">Категории</h2>
-            <div class="line"></div>
-            <div class="wrap">
-              <div class="cards"></div>
-            </div>
-          </div>
-        </section>
-        <section class="top-sellers items">
-          <div class="container">
-            <h2 class="sec-name">Популярные товары</h2>
-            <div class="line"></div>
-            <div class="wrap"></div>
-          </div>
-        </section>
-        <section class="reviews">
-          <div class="container">
-            <h2 class="sec-name">Отзывы</h2>
-            <div class="line"></div>
-            <div class="wrap"></div>
-            <div class="switch">
-              <i class="fa-solid fa-chevron-left"></i>
-              <div class="indicators"></div>
-              <i class="fa-solid fa-chevron-right"></i>
-            </div>
-          </div>
-        </section>
-      </main>
+      <main></main>
       <footer>
         <div class="container">
           <div class="wrap">
@@ -134,17 +89,13 @@
             <div class="column navigation">
               <span>Навигация</span>
               <ul>
-                <li><a href="index.html" class="link-active">Главная</a></li>
+                <li><a href="index.html" class="">Главная</a></li>
                 <li>
-                  <a href="shop.html">Магазин</a>
+                  <a href="shop.html" class="link-active">Магазин</a>
                   <ul>
                     <li><a href="electric.html">Электрогитары</a></li>
-                    <li>
-                      <a href="acoustic.html">Акустические гитары</a>
-                    </li>
-                    <li>
-                      <a href="classical.html">Классические гитары</a>
-                    </li>
+                    <li><a href="acoustic.html">Акустические гитары</a></li>
+                    <li><a href="classical.html">Классические гитары</a></li>
                     <li><a href="acessories.html">Аксессуары</a></li>
                   </ul>
                 </li>
@@ -157,8 +108,10 @@
               <ul>
                 <li><a href="">+7 370 730-93-40</a></li>
                 <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-                <li><a href="adress.html">Адреса магазинов</a></li>
-                <li><a href="about.html">О нас</a></li>
+                <li>
+                  <a href="adress.html">Адреса магазинов</a>
+                </li>
+                <li><a href="about.html" class="link-active">О нас</a></li>
                 <li><a href="news.html">Новости</a></li>
               </ul>
             </div>
@@ -181,7 +134,7 @@
         </div>
       </footer>
     </div>
-    <script src="js/home.js " type="module"></script>
+    <script src="js/shop.js"></script>
     <script src="js/base.js"></script>
   </body>
 </html>
