--- a/acessories.html
+++ b/acessories.html
@@ -21,9 +21,8 @@
     <link rel="stylesheet" href="css/materialize.min.css" />
     <!-- link materialize -->
     <link rel="stylesheet" href="css/base.min.css" />
-    <link rel="stylesheet" href="css/shop.min.css" />
-    <link rel="stylesheet" href="css/items.min.css" />
     <link rel="stylesheet" href="css/category.min.css" />
+    <link rel="stylesheet" href="css/items.min.css" />
     <!-- link style css -->
     <link rel="stylesheet" href="fonts/logo/style.css" />
   </head>
@@ -58,13 +57,13 @@
             <li><a href="">+7 370 730-93-40</a></li>
             <li><a href="barett@gmail.com">barett@gmail.com</a></li>
             <li><a href="adress.html">Адреса магазинов</a></li>
-            <li><a href="abuot.html">О нас</a></li>
+            <li><a href="about.html">О нас</a></li>
             <li><a href="news.html">Новости</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <header>
+    <header class="acessories">
       <div class="container">
         <span class="cur-page">Аксессуары</span>
         <div class="mini-menu">
@@ -75,7 +74,7 @@
     </header>
     <div class="wrapper">
       <main>
-        <div class="items" id="ench">
+        <div class="items acessories" id="ench">
           <div class="container">
             <div class="wrap"></div>
           </div>
@@ -97,7 +96,7 @@
             <div class="column navigation">
               <span>Навигация</span>
               <ul>
-                <li><a href="index.html" class="">Главная</a></li>
+                <li><a href="index.html" >Главная</a></li>
                 <li>
                   <a href="shop.html">Магазин</a>
                   <ul>
@@ -121,7 +120,7 @@
                 <li><a href="">+7 370 730-93-40</a></li>
                 <li><a href="barett@gmail.com">barett@gmail.com</a></li>
                 <li><a href="adress.html">Адреса магазинов</a></li>
-                <li><a href="abuot.html">О нас</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="news.html">Новости</a></li>
               </ul>
             </div>
