--- a/shop.html
+++ b/shop.html
@@ -54,7 +54,7 @@
             <li><a href="">+7 370 730-93-40</a></li>
             <li><a href="barett@gmail.com">barett@gmail.com</a></li>
             <li><a href="adress.html">Адреса магазинов</a></li>
-            <li><a href="abuot.html">О нас</a></li>
+            <li><a href="about.html">О нас</a></li>
             <li><a href="news.html">Новости</a></li>
           </ul>
         </div>
@@ -158,7 +158,7 @@
                 <li><a href="">+7 370 730-93-40</a></li>
                 <li><a href="barett@gmail.com">barett@gmail.com</a></li>
                 <li><a href="adress.html">Адреса магазинов</a></li>
-                <li><a href="abuot.html">О нас</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="news.html">Новости</a></li>
               </ul>
             </div>
