--- a/adress.html
+++ b/adress.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barett | Магазин</title>
+    <title>Barett | Адреса магазинов</title>
     <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
     <!-- link gogh font -->
     <link
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/materialize.min.css" />
     <!-- link materialize -->
     <link rel="stylesheet" href="css/base.min.css" />
-    <link rel="stylesheet" href="css/shop.min.css" />
+    <link rel="stylesheet" href="css/adress.min.css" />
     <!-- link style css -->
     <link rel="stylesheet" href="fonts/logo/style.css" />
   </head>
@@ -37,7 +37,7 @@
           <ul>
             <li><a href="index.html" class="">Главная</a></li>
             <li>
-              <a href="shop.html" class="link-active">Магазин</a>
+              <a href="shop.html">Магазин</a>
               <ul>
                 <li><a href="electric.html">Электрогитары</a></li>
                 <li><a href="acoustic.html">Акустические гитары</a></li>
@@ -53,8 +53,10 @@
           <ul>
             <li><a href="">+7 370 730-93-40</a></li>
             <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-            <li><a href="adress.html">Адреса магазинов</a></li>
-            <li><a href="abuot.html">О нас</a></li>
+            <li>
+              <a href="adress.html" class="link-active">Адреса магазинов</a>
+            </li>
+            <li><a href="about.html">О нас</a></li>
             <li><a href="news.html">Новости</a></li>
           </ul>
         </div>
@@ -62,7 +64,7 @@
     </div>
     <header>
       <div class="container">
-        <span class="cur-page">Магазин</span>
+        <span class="cur-page">Адреса магазинов</span>
         <div class="mini-menu">
           <span class="icon-Logo logo"></span>
           <i class="fa-solid fa-bars bars"></i>
@@ -71,9 +73,47 @@
     </header>
     <div class="wrapper">
       <main>
-        <div class="container">
-          <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/?ll=37.666516%2C55.738445&utm_medium=mapframe&utm_source=maps&z=10.6" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.ru/map-widget/v1/?ll=37.666516%2C55.738445&z=10.6" width="100%" height="700" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-        </div>
+        <section class="map-wrap">
+          <div class="container">
+            <h2 class="sec-name">Мы на карте</h2>
+            <div class="line"></div>
+            <div class="map" style="position: relative; overflow: hidden">
+              <a
+                href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 0px;
+                "
+                >Москва</a
+              ><a
+                href="https://yandex.ru/maps/213/moscow/?ll=37.666516%2C55.738445&utm_medium=mapframe&utm_source=maps&z=10.6"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 14px;
+                "
+                >Яндекс Карты — транспорт, навигация, поиск мест</a
+              ><iframe
+                src="https://yandex.ru/map-widget/v1/?ll=37.666516%2C55.738445&z=10.6"
+                width="100%"
+                height="500"
+                frameborder="1"
+                allowfullscreen="true"
+                style="position: relative"
+              ></iframe>
+            </div>
+          </div>
+        </section>
+        <section class="adresses">
+          <div class="container">
+            <h2 class="sec-name">Адреса</h2>
+            <div class="line"></div>
+            <div class="items"></div>
+          </div>
+        </section>
       </main>
       <footer>
         <div class="container">
@@ -110,8 +150,10 @@
               <ul>
                 <li><a href="">+7 370 730-93-40</a></li>
                 <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-                <li><a href="adress.html">Адреса магазинов</a></li>
-                <li><a href="abuot.html">О нас</a></li>
+                <li>
+                  <a href="adress.html" class="link-active">Адреса магазинов</a>
+                </li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="news.html">Новости</a></li>
               </ul>
             </div>
